syntax = "proto3";

package ocf.cloud.certificateauthority.pb;

option go_package = "github.com/go-ocf/certificate-authority/pb;pb";

message AuthorizationContext {
  string access_token = 1; // JWT token
}
